// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccordionItem > matches snapshot when closed 1`] = `
"<div class="border-b border-gray-200"><button class="w-full text-left bg-white py-2 px-4 hover:bg-gray-100 focus:outline-none flex justify-between items-center">Test Name<font-awesome-icon icon="chevron-right"></font-awesome-icon></button>
  <div class="py-2 px-4" style="display: none;">
    <div>Inner Content</div>
  </div>
</div>"
`;

exports[`AccordionItem > matches snapshot when open 1`] = `
"<div class="border-b border-gray-200"><button class="w-full text-left bg-white py-2 px-4 hover:bg-gray-100 focus:outline-none flex justify-between items-center">Test Name<font-awesome-icon icon="chevron-down"></font-awesome-icon></button>
  <div class="py-2 px-4">
    <div>Inner Content</div>
  </div>
</div>"
`;
